Fixing for Java8 compatibility issues